--- a/client/src/devconnector_html_theme/css/style.css
+++ b/client/src/devconnector_html_theme/css/style.css
@@ -333,7 +333,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('./devconnector_html_theme/img/showcase.jpg') no-repeat center center/cover;
+  background: url('../img/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
 }
 
